--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,12 @@
-name: pacenote
+name: racepace
 description: "Notes and calculators for runners and cyclists"
+repository: "https://github.com/gonfff/racepace"
+platforms:
+  ios:
+flutter_launcher_icons:
+  image_path: "assets/icon.jpeg"
+  ios: true
+
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: "none" # Remove this line if you wish to publish to pub.dev
@@ -16,7 +23,7 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 0.1.0+1
+version: 0.2.1+3
 
 environment:
   sdk: ^3.10.4
@@ -49,6 +56,7 @@ dev_dependencies:
     sdk: flutter
   drift_dev: ^2.18.0
   build_runner: ^2.4.12
+  flutter_launcher_icons: ^0.13.1
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
