--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   sqlite3_flutter_libs: ^0.5.24
   package_info_plus: ^8.3.1
   url_launcher: ^6.3.0
+  share_plus: ^10.1.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
